--- a/lingo/templates/lingo/dashboard.html
+++ b/lingo/templates/lingo/dashboard.html
@@ -1,4 +1,4 @@
-<a href="/logout">Logout</a>
+<a href="/settings">Settings</a> | <a href="/logout">Logout</a>
 <h1>Dashboard</h1>
 <h2>Hello, {{ user.first_name }}!</h2>
 Email: {{ user.email }}
