users can add multiple languages

--- a/app/templates/app/settings.html
+++ b/app/templates/app/settings.html
@@ -1,2 +1,10 @@
-<a href="/dashboard">Dashboard</a> | <a href="/logout">Logout</a>
+<a href="/">Lingo</a> |
+<a href="/settings/">{{ user.email }}</a> (<a href="/logout">Logout)</a>
+
 <h1>Settings</h1>
+
+<form action="/settings/" method="post">
+  {% csrf_token %}
+  {{ language_form.as_p }}
+  <input type="submit" value="Update" />
+</form>
