--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -1,4 +1,5 @@
-<a href="/settings">Settings</a> | <a href="/logout">Logout</a>
+<a href="/settings">Settings</a> |
+<a href="/settings/">{{ user.email }}</a> (<a href="/logout">Logout)</a>
+
 <h1>Dashboard</h1>
 <h2>Hello, {{ user.first_name }}!</h2>
-Email: {{ user.email }}
