--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -1,5 +1,5 @@
 <a href="/">Lingo</a> |
-<a href="/settings/">{{ user.email }}</a> (<a href="/logout">Logout)</a>
+<a href="{% url 'settings' %}">{{ user.email }}</a> (<a href="{% url 'logout' %}">Logout)</a>
 
 <h1>Dashboard</h1>
 <b>Hello, {{ user.first_name }}!</b>
@@ -8,7 +8,7 @@
 
 {% if first_language_form %}
 
-  <form action="/dashboard/" method="post">
+  <form action="{% url 'dashboard' %}" method="post">
     {% csrf_token %}
     <b>Pick a language and start learning:</b>
     {{ first_language_form.non_field_errors }}
@@ -21,7 +21,7 @@
 
 {% else %}
 
-  <form action="/dashboard/" method="post">
+  <form action="{% url 'dashboard' %}" method="post">
     {% csrf_token %}
     {{ active_language_form }}
     <input type="submit" value="Go!" />
